# frappe-azure-backup

./: README.md  pyproject.toml  requirements.txt
azure_backup/: azure_helper.py  hooks.py  tasks.py
azure_backup/azure_backup/: __init__.py
azure_backup/azure_backup/doctype/azure_backup_settings/: azure_backup_settings.js  azure_backup_settings.json  azure_backup_settings.py  test_azure_backup_settings.py
azure_backup/config/: desktop.py
azure_backup/tests/: test_azure_backup.py
